# tj-psat-analysis

./: .gitignore  AGENTS.md  HYPOTHESIS.md  LEARNINGS.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
data/interim/: canonical_schools.csv  panel_nmsf.csv  panel_seed.csv  private_grade11_enrollment.csv  private_grade11_enrollment_pss_locator_2023_24.csv  public_enrollment_raw.csv  public_grade11_enrollment.csv  public_grade11_enrollment_2024_25.csv  (+1 more)
docs/: data_dictionary.md
reports/: analysis.md  conclusions.md  descriptive_results.md  initial_findings.md  limitations.md  robustness.md  task9_completion.md
scripts/: apply_nmsf_counts.py  build_analysis_panel.py  build_analysis_reports.py  build_conclusion_graphic.py  build_descriptive_outputs.py  build_enrollment_panel.py  build_focal_period_completion.py  build_nmsf_observations.py  build_nmsf_pilot_2023_2026.py  build_school_roster.py  build_seed_data.py  build_task9_outputs.py  ingest_nmsc_virginia_lists.py  ingest_private_pss.py  ingest_private_pss_locator_2023_24.py  ingest_public_enrollment_2024_25.py  ingest_public_enrollment_nces_supplement.py  ingest_tjhsst_admissions.py  validate_nmsf_sources.py
tests/: test_analysis_panel.py  test_analysis_reports.py  test_descriptive_outputs.py  test_enrollment_panel.py  test_focal_period_completion.py  test_manual_nmsf_counts.py  test_nmsc_virginia_list.py  test_nmsf_manifest_and_observations.py  test_nmsf_pilot.py  test_nmsf_source_guard.py  test_school_roster.py  test_seed_ingestion.py  test_task9_outputs.py  test_tjhsst_admissions.py
(+171 files in other folders)
