[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tj-psat-analysis"
version = "0.1.0"
description = "Reproducible TJHSST admissions-change NMSF and enrollment panel."
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "tests"
