[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tj-psat-analysis"
version = "0.1.0"
description = "Reproducible TJHSST admissions-change NMSF and enrollment panel."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "tests"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["tj_psat_analysis"]

[tool.ruff.lint.per-file-ignores]
"scripts/build_task9_outputs.py" = ["E501"]
"scripts/*.py" = ["E402"]
"tests/*.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
files = ["src", "scripts"]
